# video-transcriber

./: .gitignore  README.md  pyproject.toml
docs/: GUIDE.md
tests/: __init__.py  test_api.py  test_cli.py  test_formatter.py  test_youtube.py
transcriber/: __init__.py  cli.py  config.py  database.py  main.py  models.py
transcriber/services/: __init__.py  audio.py  formatter.py  transcription.py  whisper.py  youtube.py
transcriber/static/: app.js  index.html  style.css
