[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-transcriber"
version = "0.1.0"
description = "CLI and Web tool for video transcription using Whisper"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Alexey Utepov" }
]

dependencies = [
    "faster-whisper>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "yt-dlp>=2024.1.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sse-starlette>=1.6.0",
    "aiosqlite>=0.19.0",
    "greenlet>=2.0.0",
    "imageio-ffmpeg>=0.4.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[project.scripts]
transcribe = "transcriber.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["transcriber"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
